# bff/docs/swagger.yaml
@@ -809,6 +809,31 @@ definitions:
     required:
     - type_of_grade_scores
     type: object
+  grade.GetRankByTermReq:
+    properties:
+      refresh:
+        type: boolean
+      xnm_begin:
+        description: 学年学期四个字段为空则获取总成绩
+        type: integer
+      xnm_end:
+        type: integer
+      xqm_begin:
+        type: integer
+      xqm_end:
+        type: integer
+    type: object
+  grade.GetRankByTermResp:
+    properties:
+      include:
+        items:
+          type: string
+        type: array
+      rank:
+        type: string
+      score:
+        type: string
+    type: object
   grade.Grade:
     properties:
       Kclbmc:
@@ -877,57 +902,6 @@ definitions:
     - kcmc
     - xf
     type: object
-  grade.GraduateGrade:
-    properties:
-      classCategory:
-        type: string
-      classCode:
-        type: string
-      classID:
-        type: string
-      classMark:
-        type: string
-      className:
-        type: string
-      classNature:
-        type: string
-      college:
-        type: string
-      credit:
-        type: number
-      grade:
-        type: integer
-      gradePoints:
-        type: number
-      isAvailable:
-        type: string
-      isDegree:
-        type: string
-      jxbId:
-        type: string
-      major:
-        type: string
-      name:
-        type: string
-      point:
-        type: number
-      setCollege:
-        type: string
-      status:
-        type: string
-      studentCategory:
-        type: string
-      studentID:
-        type: string
-      studentNum:
-        type: string
-      teacher:
-        type: string
-      term:
-        type: integer
-      year:
-        type: string
-    type: object
   grade.TypeOfGradeScore:
     properties:
       grade_score_list:
@@ -940,25 +914,6 @@ definitions:
     required:
     - grade_score_list
     - kcxzmc
-    type: object
-  grade.UpdateGraduateGradesReq:
-    properties:
-      cjzt:
-        description: 成绩状态(0-全部；不填也可)
-        type: integer
-      xnm:
-        description: 学年，可选
-        type: integer
-      xqm:
-        description: 学期(1/2/3)，可选
-        type: integer
-    type: object
-  grade.UpdateGraduateGradesResp:
-    properties:
-      grades:
-        items:
-          $ref: '#/definitions/grade.GraduateGrade'
-        type: array
     type: object
   infoSum.DelInfoSumRequest:
     properties:
@@ -2887,35 +2842,48 @@ paths:
       summary: 查询学分
       tags:
       - grade
-  /grade/getGraduateGrade:
+  /grade/getRankByTerm:
     post:
       consumes:
       - application/json
-      description: 根据学年号和学期号获取用户的成绩
+      description: 根据学年号和学期号获取用户的学分绩排名以及分数和统计的科目，全为0则查总排名
       parameters:
-      - description: 获取学年和学期的成绩请求参数
+      - description: 获取学年和学期的学分绩排名请求参数
         in: body
         name: data
         required: true
         schema:
-          $ref: '#/definitions/grade.UpdateGraduateGradesReq'
+          $ref: '#/definitions/grade.GetRankByTermReq'
       produces:
       - application/json
       responses:
         "200":
-          description: 成功返回学年和学期的成绩信息
+          description: 成功返回学年和学期的排名信息
           schema:
             allOf:
             - $ref: '#/definitions/web.Response'
             - properties:
                 data:
-                  $ref: '#/definitions/grade.UpdateGraduateGradesResp'
+                  $ref: '#/definitions/grade.GetRankByTermResp'
               type: object
         "500":
           description: 系统异常，获取失败
           schema:
             $ref: '#/definitions/web.Response'
-      summary: 查询研究生成绩
+      summary: 查询学分绩排名
+      tags:
+      - grade
+  /grade/loadRank:
+    get:
+      description: 当用户点开app时前端发现从未预加载过，调用该接口预加载总排名，每个用户只需调用一次即可
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回信息
+          schema:
+            $ref: '#/definitions/web.Response'
+      summary: 预加载总排名
       tags:
       - grade
   /library/cancel_reserve:
@@ -3019,7 +2987,7 @@ paths:
         name: Authorization
         required: true
         type: string
-      - description: 座位或评论关联 ID
+      - description: 座位 ID (devID)
         in: query
         name: id
         required: true
